out.txt
  File "<string>", line 1
    import requests, bs4; r1=requests.get('https://www.screener.in/company/CUB/consolidated/', headers={'User-Agent':'Mozilla'}); r2=requests.get('https://www.screener.in/company/CUB/', headers={'User-Agent':'Mozilla'}); print('Consol code:', r1.status_code); print('Standalone code:', r2.status_code); try: print('Consol THs:', len(bs4.BeautifulSoup(r1.text, 'html.parser').find('section', id='profit-loss').find('table').find('tr').find_all('th'))); except: print('No consol table'); try: print('Standalone THs:', len(bs4.BeautifulSoup(r2.text, 'html.parser').find('section', id='profit-loss').find('table').find('tr').find_all('th'))) except: print('no standalone')
                                                                                                                                                                                                                                                                                                               ^^^
SyntaxError: invalid syntax
